--- a/package.json
+++ b/package.json
@@ -74,8 +74,10 @@
 	},
 	"dependencies": {
 		"prop-types": "^15.6.1",
-		"react": "^16.8.4",
-		"react-dom": "^16.8.4",
+		"react": "^17.0.2",
+		"react-confetti": "^6.4.0",
+		"react-dom": "^17.0.2",
+		"react-icons": "^5.5.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
 	}
